--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,20 @@
 # Custom
 .idea/
 
-# Created by https://www.gitignore.io/api/linux,python,pycharm
+# Created by https://www.gitignore.io/api/linux,python,django,pycharm
+
+### Django ###
+*.log
+*.pot
+*.pyc
+__pycache__/
+local_settings.py
+db.sqlite3
+media
+
+# If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
+# in your Git repository. Update and uncomment the following line accordingly.
+# <django-project-name>/staticfiles/
 
 ### Linux ###
 *~
@@ -82,7 +95,6 @@ fabric.properties
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
-__pycache__/
 *.py[cod]
 *$py.class
 
@@ -130,11 +142,8 @@ coverage.xml
 
 # Translations
 *.mo
-*.pot
 
 # Django stuff:
-*.log
-local_settings.py
 
 # Flask stuff:
 instance/
@@ -183,4 +192,4 @@ venv.bak/
 # mypy
 .mypy_cache/
 
-# End of https://www.gitignore.io/api/linux,python,pycharm
+# End of https://www.gitignore.io/api/linux,python,django,pycharm
